objects/ARSF_AccObj1__c.object
<CustomObject>
    <description>This is testing. I am going for a new commit</description>
    <fields>
        <fullName>ARSF_Feid2__c</fullName>
        <description>Test this field</description>
        <label>ARSF-Feid2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ARSF_Field1__c</fullName>
        <label>ARSF Field1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ChiCheckbox1_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ChiCheckbox1</label>
        <type>Checkbox</type>
    </fields>
    <label>ARSF-AccObj1</label>
    <nameField>
        <label>ARSF-AccObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARSFAccObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>